feat: implement modular state machine orchestration framework with batch, atomic, and messaging support